remove scrollbar and add slider, fix blue line before

--- a/dev/scss/_includes/separate/global.scss
+++ b/dev/scss/_includes/separate/global.scss
@@ -36,9 +36,9 @@
 	}
 
 
-	.slick-list {
-		padding-left: 10px;
-	}
+	// .slick-list {
+	// 	padding-left: 10px;
+	// }
 	
 	.c-series-block__info-item.views {
 		margin-top: -13px;
