--- a/dev/templates/_includes/components/c-seasons-video-list/c-seasons-video-list.scss
+++ b/dev/templates/_includes/components/c-seasons-video-list/c-seasons-video-list.scss
@@ -3,31 +3,29 @@
 	border-radius: 8px;
 	padding: 19px 16px;
 	background-color: #EFF1F3;
-	overflow: hidden;
-	&:before {
-		content: "";
-		height: 2px;
-		width: 288px;
-		position: absolute;
-		top: 58px;
-		background-color: #fff;
-		z-index: 1;
-	}
+	// overflow: hidden;
 	.c-series-list__wrapper {
 		max-width: 280px;
 	}
+	// .mCSB_1_container {
+	// 	display: flex;
+	// }
 	.seasons-list {
 		margin-bottom: 24px;
-		display: flex;
 		width: 288px;
 		// border-bottom: 2px solid #fff;
-		overflow-x: hidden;
+		// overflow-x: hidden;
+		// overflow-x: auto;
 		// overflow-y: visible;
+		// -ms-scroll-chaining: none;
 		&__item {
+			display: inline-block;
 			flex-shrink: 0;
 			height: 43px;
 			text-align: right;
-			margin-right: 14px;
+			margin-right: 24px;
+			white-space: nowrap;
+			width: 54px;
 			&-title {
 				position: relative;
 				font-style: normal;
@@ -42,21 +40,32 @@
 					color: rgba(22, 24, 29, 0.5);
 				}
 			}
-			&.current {
-				position: relative;
-			}
 			&.current span {
 				color: #16181D;
 			}
-			&.current:before {
+			&:before {
 				content: "";
+				height: 2px;
+				width: 288px;
+				position: absolute;
+				bottom: 0;
+				background-color: #fff;
+				z-index: 1;
+				bottom: 1px;
+			}
+			&.current span:after {
+				content: "";
+				left: 0;
+				bottom: -19px;
 				height: 2px;
 				width: 100%;
 				position: absolute;
-				bottom: 2px;
 				background-color: #2064DB;
-				z-index: 2;
+				z-index: 3;
 			}
+		}
+		.slick-current {
+			position: relative;
 		}
 	}
 }
@@ -81,3 +90,26 @@
 .seasons-video-container__all-season:hover {
 	color: #2064DB;
 }
+
+// .mCS-custom-scroll {
+// 	.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+// 		// background-color: transparent;
+// 		background-color: #2064DB;
+// 	}
+// 	.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar:hover {
+// 		// background-color: transparent;
+// 		background-color: #2064DB;
+// 	}
+
+// 	.mCSB_scrollTools .mCSB_draggerRail { 
+// 		background-color: #fff; 
+// 	}
+// 	#mCSB_1_scrollbar_horizontal .mCSB_dragger {
+// 		width: 55px;
+// 		height: 2px; 
+// 	} 
+// }
+
+// .mCSB_horizontal.mCSB_inside > .mCSB_container {
+// 	margin-bottom: 5px!important;
+// }
